<resources>
    <string name="app_name">Manual NetOrange</string>
    <string name="log_in_button">Iniciar Sesion</string>
    <string name="exit_button">Salir</string>
    <string name="tittle">NetOrange Manual</string>
    <string name="username_label">Usuario</string>
    <string name="password_label">Contraseña</string>
    <string name="hint_edittext_username">introduce tu usuario</string>
    <string name="hint_edittext_password">Introduce tu contraseña</string>
    <string name="index_label">Indice</string>
    <string name="inicio_de_sesion">1-Inicio de Sesion</string>
    <string name="los_usuarios_est_ndar_tienen_acceso_limitado_a_las_funciones_del_sistema_pueden_visualizar_e_interactuar_con_funcionalidades_b_sicas_pero_no_pueden_modificar_la_configuraci_n_del_sistema">Al ingresar en la sección de correo, encontrarás un botón denominado "Login with Google". Al pulsarlo, se abrirá una ventana en el navegador para iniciar sesión con tu cuenta de Google.(Por el momento no esta disponible el uso de la cuenta de la fundacion por que esta bloquea el inicio de sesion desde aplicaciones de terceros) Además, hay una flecha que permite regresar al menú principal.</string>
    <string name="requisitos_necesesarios">Requisitos Necesesarios:</string>
    <string name="la_cuenta_con_la_que_inicies_sesion_debe_coincidir_con_la_que_esta_registrada_con_su_usuario_de_la_aplicacion">• La cuenta con la que inicies sesion debe coincidir con la que esta registrada con su usuario de la aplicacion</string>
    <string name="posser_una_cuenta_de_google">• Posser una cuenta de google</string>
    <string name="ejemplo_grafico">Ejemplo Grafico</string>
    <string name="volver_atr_s">Volver atrás</string>
    <string name="manual_de_usuario">Manual de Usuario</string>
    <string name="ndice">Índice</string>
    <string name="_1_inicio_de_sesion">1. Inicio de Sesion</string>
    <string name="_2_uso_de_correo">2. Uso de Correo</string>
    <string name="_2_1_leer_correo">2.1 Leer Correo</string>
    <string name="_2_2_enviar_correo">2.2 Enviar Correo</string>
    <string name="_1_pincho_en_el_boton_de_login_with_google">1º-Pincho en el boton de Login with google</string>
    <string name="_2_en_el_navegador_eligo_la_cuenta_de_correo_correcta_tendra_que_ser_la_asociada_a_su_usuario_no_esta_disponible_usar_el_correo_de_la_fundacion">2º-En el navegador eligo la cuenta de correo correcta,tendra que ser la asociada a su usuario , no esta disponible usar el correo de la fundacion</string>
    <string name="_3_nos_aparecera_un_aviso_de_que_no_se_ha_verificado_le_doy_a_configuracion_avanzada">3º-Nos aparecera un aviso de que no se ha verificado , le doy a configuracion avanzada</string>
    <string name="_4_y_le_das_a_ir_a_appcorreo">4º-Y le das a ir a AppCorreo</string>
    <string name="_5_le_doy_perpisos_para_que_pueda_usar_los_servicios_de_gmail_y_le_doy_en_continuar">5º-Le doy perpisos para que pueda usar los servicios de gmail,y le doy en continuar</string>
    <string name="_6_ya_has_terminado_el_inicio_de_sesion_es_posible_cerrar_la_pesta_a_y_continuar_en_la_aplicacion">6º-Ya has terminado el inicio de sesion, es posible cerrar la pestaña y continuar en la aplicacion</string>
    <string name="_2_uso_del_correo">2. Uso del Correo</string>
    <string name="despu_s_de_haber_iniciado_sesi_n_cargar_la_bandeja_de_entrada_de_correos">Después de haber iniciado sesión, cargará la bandeja de entrada de correos.</string>
    <string name="al_lado_de_cada_correo_nos_aparecer_n_dos_botones_en_la_columna_actions_uno_elimina_el_correo_y_otro_cambia_el_estado_de_le_do_o_no_le_do_al_contrario">Al lado de cada correo nos aparecerán dos botones en la columna Actions: uno elimina el correo y otro cambia el estado de Leído o No leído al contrario.</string>
    <string name="el_bot_n_de_refresh_recarga_la_bandeja_de_entrada_y_el_bot_n_de_log_out_cierra_sesi_n_del_correo_no_de_la_aplicaci_n">El botón de Refresh recarga la bandeja de entrada, y el botón de Log Out cierra sesión del correo (no de la aplicación).</string>
    <string name="_2_1_leer_correo_texto">2.1 Leer correo</string>
    <string name="al_hacer_doble_clic_sobre_un_correo_este_se_abrir_en_una_nueva_pesta_a_donde_se_mostrar_el_contenido_completo_del_correo_y_los_archivos_adjuntos_organizados_en_un_apartado_llamado_attachments_en_este_apartado_cada_archivo_tendr_un_bot_n_que_permitir_descargarlo_autom_ticamente_al_hacer_clic">Al hacer doble clic sobre un correo, este se abrirá en una nueva pestaña donde se mostrará el contenido completo del correo y los archivos adjuntos organizados en un apartado llamado Attachments. En este apartado, cada archivo tendrá un botón que permitirá descargarlo automáticamente al hacer clic.</string>
    <string name="_2_2_enviar_correo_texto">2.2 Enviar Correo</string>
    <string name="en_la_bandeja_de_entrada_al_acceder_a_la_opci_n_enviar_mail_encontrar_s_los_campos_necesarios_para_completar_el_env_o_de_un_mensaje_el_campo_para_corresponde_al_destinatario_del_correo_quien_debe_estar_incluido_en_la_lista_blanca_whitelist_tambi_n_es_imprescindible_rellenar_el_asunto_y_el_mensaje_adem_s_al_pulsar_el_bot_n_adjuntar_archivo_se_abrir_el_explorador_de_carpetas_para_que_selecciones_los_archivos_que_deseas_enviar_sin_embargo_es_importante_tener_en_cuenta_que_el_tama_o_total_de_los_archivos_no_debe_superar_los_10_mb_ni_ning_n_archivo_individual_puede_exceder_este_l_mite">En la bandeja de entrada, al acceder a la opción Enviar Mail, encontrarás los campos necesarios para completar el envío de un mensaje. El campo Para corresponde al destinatario del correo, quien debe estar incluido en la lista blanca (whitelist). También es imprescindible rellenar el asunto y el mensaje. Además, al pulsar el botón Adjuntar archivo, se abrirá el explorador de carpetas para que selecciones los archivos que deseas enviar; sin embargo, es importante tener en cuenta que el tamaño total de los archivos no debe superar los 10 MB, ni ningún archivo individual puede exceder este límite.</string>
    <string name="_2024_netorange_protected_rights">2024 NetOrange protected rights</string>
    <string name="gestion_usuarios">Gestion Usuarios</string>
    <string name="email_managment">Gestión Correos</string>
    <string name="manual_de_usuario_ftp_server">Manual de Usuario FTP Server</string>
    <string name="_1_gesti_n_archivos">1. Gestión archivos</string>
    <string name="_2_gesti_n_directorios">2. Gestión directorios</string>
    <string name="_3_consultas">3. Consultas</string>
    <string name="_4_almacenamiento_admin">4. Almacenamiento (ADMIN)</string>
    <string name="_5_gesti_n_permisos_admin">5. Gestión permisos (ADMIN)</string>
    <string name="introducci_n">Introducción</string>
    <string name="existen_m_ltiples_opciones_a_las_que_tendr_n_acceso_los_usuarios_seg_n_sea_su_nivel_de_permisos">Existen múltiples opciones a las que tendrán acceso los usuarios según sea su nivel de permisos</string>
    <string name="gesti_n_archivos">Gestión archivos:</string>
    <string name="subir_archivo">• Subir archivo</string>
    <string name="comenzaremos_eligiendo_el_directorio_ftp_a_donde_queremos_subir_el_archivo_se_mostrar_un_desplegable_con_todos_los_disponibles_seleccionaremos_el_archivo_a_subir_pulsando_sobre_el_bot_n_seleccionar_archivo_un_avez_seleccionado_pulsamos_sobre_el_bot_n_subir_archivo_para_subir_el_archivo_al_servidor">Comenzaremos eligiendo el directorio FTP a donde queremos subir el archivo, se mostrará un desplegable con todos los disponibles. Seleccionaremos el archivo a subir pulsando sobre el botón \'Seleccionar Archivo\'. Un avez seleccionado pulsamos sobre el botón \'Subir Archivo\' para subir el archivo al servidor.</string>
    <string name="descargar_archivo">• Descargar archivo</string>
    <string name="seleccionamos_el_archivo_a_descargar_a_trav_s_del_desplegable_pulsamos_sobre_el_bot_n_descargar_archivo">Seleccionamos el archivo a descargar a través del desplegable. Pulsamos sobre el botón \'Descargar Archivo\'.</string>
    <string name="eliminar_archivo">• Eliminar archivo</string>
    <string name="seleccionamos_el_archivo_a_eliminar_a_trav_s_del_desplegable_y_pulsamos_sobre_el_bot_n_eliminar_archivo">Seleccionamos el archivo a eliminar a través del desplegable y pulsamos sobre el botón \'Eliminar Archivo\'.</string>
    <string name="renombrar_archivo">• Renombrar archivo</string>
    <string name="seleccionamos_el_archivo_a_renombrar_a_trav_s_del_desplegable_introducimos_el_nuevo_nombre_en_la_caja_de_texto_y_pulsamos_sobre_el_bot_n_renombrar_archivo">Seleccionamos el archivo a renombrar a través del desplegable. Introducimos el nuevo nombre en la caja de texto y pulsamos sobre el botón \'Renombrar Archivo\'.</string>
    <string name="gesti_n_directorio">Gestión directorio:</string>
    <string name="crear_directorio">• Crear directorio</string>
    <string name="seleccionamos_la_ruta_donde_queremos_que_se_cree_la_carpeta_o_directorio_a_trav_s_del_desplegable_introducimos_el_nombre_del_direcotio_que_queremos_crear_en_la_caja_de_texto_y_pulsamos_sobre_el_bot_n_crear_carpeta">Seleccionamos la ruta donde queremos que se cree la carpeta o directorio a través del desplegable. Introducimos el nombre del direcotio que queremos crear en la caja de texto y pulsamos sobre el botón \'Crear Carpeta\'.</string>
    <string name="eliminar_directorio">• Eliminar directorio</string>
    <string name="seleccionamos_la_ruta_donde_se_encuentra_la_carpeta_que_deseamos_eliminar_y_la_carpeta_que_queremos_eliminar_a_trav_s_de_los_desplegables_pulsamos_sobre_el_bot_n_eliminar_carpeta">Seleccionamos la ruta donde se encuentra la carpeta que deseamos eliminar y la carpeta que queremos eliminar a través de los desplegables. Pulsamos sobre el botón \'Eliminar Carpeta\'.</string>
    <string name="gesti_n_acceso">• Gestión acceso</string>
    <string name="seleccionamos_la_ruta_donde_se_encunetran_las_carpetas_de_las_que_queremos_conocer_nuestros_permisos_sobre_ellas_a_trav_s_del_desplegable_pulsamos_sobre_el_bot_n_consultar_permisos_esto_nos_mostrar_todas_las_carpetas_que_se_encuentran_en_la_ruta_seleccionada_y_los_tipos_de_permisos_que_tenemos_sobre_ellas">Seleccionamos la ruta donde se encunetran las carpetas de las que queremos conocer nuestros permisos sobre ellas a través del desplegable. Pulsamos sobre el botón \'Consultar permisos\', esto nos mostrará todas las carpetas que se encuentran en la ruta seleccionada y los tipos de permisos que tenemos sobre ellas</string>
    <string name="consultas">Consultas:</string>
    <string name="pulsamos_sobre_la_flecha_desplegable_lo_que_nos_mostrar_un_arbol_de_los_direcotrios_disponibles_podremos_desplegar_cada_directorio_para_ver_todo_su_contenido">Pulsamos sobre la flecha desplegable lo que nos mostrará un arbol de los direcotrios disponibles. Podremos desplegar cada directorio para ver todo su contenido.</string>
    <string name="almacenamiento">Almacenamiento:</string>
    <string name="seleccionamos_el_directorio_del_que_deseamos_modificar_el_l_mite_disponible_a_trav_s_del_desplegable_introducimos_el_l_mite_en_mega_bytes_en_la_caja_de_texto_y_pulsamos_sobre_el_bot_n_modificar_l_mite">Seleccionamos el directorio del que deseamos modificar el límite disponible a través del desplegable. Introducimos el límite en mega bytes en la caja de texto y pulsamos sobre el botón \'Modificar Límite\'.</string>
    <string name="seleccionamos_el_usuario_al_que_queremos_asignar_permisos_a_trav_s_del_desplegable_estos_usuarios_deb_n_de_pertenecer_a_un_grupo_una_vez_seleccionado_el_usuario_elegimos_la_carpeta_que_deseamos_a_la_que_el_usuario_tenga_permisos_y_pulsamos_sobre_el_bot_n_asignar_permisos">Seleccionamos el usuario al que queremos asignar permisos a través del desplegable. Estos usuarios debén de pertenecer a un grupo. Una vez seleccionado el usuario elegimos la carpeta que deseamos a la que el usuario tenga permisos y pulsamos sobre el botón \'Asignar Permisos\'.</string>
</resources>