<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:id="@+id/tittleLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_centerHorizontal="true"
    android:layout_alignParentTop="true"
    android:orientation="horizontal"
    android:paddingTop="20dp"
    >
    <TextView
        android:text="@string/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >
    </TextView>
</LinearLayout>

    <LinearLayout
        android:id="@+id/credentialsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:text="@string/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/edittxt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edittext_username">
        </EditText>
        <TextView
            android:text="@string/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/edittxt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edittext_password">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:paddingBottom="100dp">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_button"/>
        <Button
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_button">
        </Button>

    </LinearLayout>

</RelativeLayout>
